# mpdweb.backend

./: .gitignore  COPYING  Cargo.toml  README.md  build.gradle.kts  config.dev.toml  settings.gradle.kts  test.db
.github/workflows/: test.yml
api/: http-client.env.json  server.http
assets/: Cargo.toml
assets/src/: lib.rs
deploy/: Dockerfile
migrations/: 202301221321__create_table__test.sql  202301291642__create_table__playback_history_events.sql  202301291643__create_table__playback_history_metadata.sql  202312281255__create_table__database_labels.sql
src/: args.rs  config.rs  convert.rs  history.rs  labels.rs  main.rs  mpd.rs  persist.rs  route.rs  time.rs  tracing.rs
src/history/: handle.rs  keeper.rs
src/history/keeper/: error.rs  result.rs
src/labels/: handle.rs
src/main/kotlin/com/github/toncherami/mpd/web/: MpdWebApplication.kt
src/main/kotlin/com/github/toncherami/mpd/web/configs/: IntegrationConfig.kt  PlayerPollConfig.kt  PropertiesConfig.kt  TcpConfig.kt  WebSocketConfig.kt
src/main/resources/: application.yml
src/main/resources/db/changelog/: db.changelog-master.yaml
src/mpd/: action.rs  client.rs  data.rs  error.rs  handle.rs  manager.rs  result.rs  service.rs  sub.rs
src/mpd/client/: ack.rs  cmd.rs  conn.rs  de.rs  frame.rs
src/persist/: error.rs  repo.rs  result.rs
src/route/: assets.rs  db.rs  error.rs  history.rs  labels.rs  playlists.rs  result.rs  ws.rs
src/route/ws/: action.rs  data.rs  proto.rs  sub.rs
src/test/kotlin/com/github/toncherami/mpd/web/: MpdWebApplicationTests.kt
(+162 files in other folders)
