[package]
name = "mpdweb"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/TonCherAmi/mpdweb.backend"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tower = "0.4"

tokio = { version = "1.18", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }

tracing = "0.1.37"
tracing-subscriber = "0.3"

bytes = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

toml = "0.5.10"

sqlx = { version = "0.6.2", features = ["sqlite", "migrate", "runtime-tokio-native-tls"] }

assets = { path = "./assets" }
